--- a/Splatoon/[7.x]黄金のレガシー/ID/[7.4]遺忘行路 ミストウェイク.md
+++ b/Splatoon/[7.x]黄金のレガシー/ID/[7.4]遺忘行路 ミストウェイク.md
@@ -6,10 +6,8 @@
 ## レイアウト
 
 ```
-~Lv2~{"Name":"Hvy4N_リンドブルム_スカージブレス","Group":"[7.4]アルカディアヘビー級4層ノーマル","ZoneLockH":[1326],"ElementsL":[{"Name":"前方直線","type":3,"refY":30.0,"radius":10.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14378,"refActorRequireCast":true,"refActorCastId":[47547],"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0}]}
-~Lv2~{"Name":"Hvy4N_リンドブルム_ラヴェナスリーチ","Group":"[7.4]アルカディアヘビー級4層ノーマル","ZoneLockH":[1326],"ElementsL":[{"Name":"扇","type":4,"radius":40.0,"coneAngleMin":-60,"coneAngleMax":60,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorNPCNameID":14378,"refActorRequireCast":true,"refActorCastId":[46189],"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"DistanceMax":13.2,"FillStep":4.0}]}
-~Lv2~{"Name":"Hvy4N_リンドブルム_大爆発","Group":"[7.4]アルカディアヘビー級4層ノーマル","ZoneLockH":[1326],"ElementsL":[{"Name":"サークル","type":1,"radius":12.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14378,"refActorRequireCast":true,"refActorCastId":[46191],"refActorComparisonType":6,"includeRotation":true,"onlyUnTargetable":true,"FaceMe":true}]}
-~Lv2~{"Name":"Hvy4N_リンドブルム_クルエルコイル","Group":"[7.4]アルカディアヘビー級4層ノーマル","ZoneLockH":[1326],"MaxDistance":14.0,"UseDistanceLimit":true,"DistanceLimitType":1,"ElementsL":[{"Name":"トリガー","type":1,"refActorNPCNameID":14378,"refActorRequireCast":true,"refActorCastId":[46198],"refActorComparisonType":6,"Conditional":true,"Nodraw":true},{"Name":"テザー_黒縁","type":1,"offY":13.5,"radius":0.0,"color":4278190080,"fillIntensity":0.3,"thicc":10.0,"refActorNPCNameID":14378,"refActorComparisonType":6,"includeRotation":true,"onlyTargetable":true,"tether":true,"FaceMe":true},{"Name":"テザー","type":1,"offY":13.5,"radius":0.0,"color":4294967295,"fillIntensity":0.3,"thicc":5.0,"refActorNPCNameID":14378,"refActorComparisonType":6,"includeRotation":true,"onlyTargetable":true,"tether":true,"FaceMe":true}]}
-~Lv2~{"Name":"Hvy4N_リンドブルム_フェラルフィッション","Group":"[7.4]アルカディアヘビー級4層ノーマル","ZoneLockH":[1326],"Freezing":true,"FreezeFor":10.0,"IntervalBetweenFreezes":0.2,"ElementsL":[{"Name":"前方直線_1-1","type":3,"refX":3.0,"refY":13.0,"offX":3.0,"offY":-2.0,"radius":5.0,"color":4278190080,"fillIntensity":0.5,"refActorNPCNameID":14378,"refActorRequireCast":true,"refActorCastId":[46203],"refActorUseCastTime":true,"refActorCastTimeMax":0.1,"refActorComparisonType":6,"includeRotation":true,"LimitDistance":true,"DistanceSourceX":82.0,"DistanceSourceY":98.0,"DistanceMax":1.0,"FillStep":2.0},{"Name":"前方直線_1-2","type":3,"refX":3.0,"refY":13.0,"offX":3.0,"offY":-2.0,"radius":5.0,"color":4278190080,"fillIntensity":0.5,"refActorNPCNameID":14378,"refActorRequireCast":true,"refActorCastId":[46203],"refActorUseCastTime":true,"refActorCastTimeMax":0.1,"refActorComparisonType":6,"includeRotation":true,"LimitDistance":true,"DistanceSourceX":82.0,"DistanceSourceY":113.0,"DistanceMax":1.0,"FillStep":2.0},{"Name":"前方直線_2-1","type":3,"refX":3.0,"refY":13.0,"offX":3.0,"offY":-2.0,"radius":5.0,"color":4278190080,"fillIntensity":0.5,"refActorNPCNameID":14378,"refActorRequireCast":true,"refActorCastId":[46203],"refActorUseCastTime":true,"refActorCastTimeMax":0.1,"refActorComparisonType":6,"includeRotation":true,"LimitDistance":true,"DistanceSourceX":92.0,"DistanceSourceY":98.0,"DistanceMax":1.0,"FillStep":2.0},{"Name":"前方直線_2-2","type":3,"refX":3.0,"refY":13.0,"offX":3.0,"offY":-2.0,"radius":5.0,"color":4278190080,"fillIntensity":0.5,"refActorNPCNameID":14378,"refActorRequireCast":true,"refActorCastId":[46203],"refActorUseCastTime":true,"refActorCastTimeMax":0.1,"refActorComparisonType":6,"includeRotation":true,"LimitDistance":true,"DistanceSourceX":92.0,"DistanceSourceY":113.0,"DistanceMax":1.0,"FillStep":2.0},{"Name":"前方直線_3-1","type":3,"refX":3.0,"refY":13.0,"offX":3.0,"offY":-2.0,"radius":5.0,"color":4278190080,"fillIntensity":0.5,"refActorNPCNameID":14378,"refActorRequireCast":true,"refActorCastId":[46203],"refActorUseCastTime":true,"refActorCastTimeMax":0.1,"refActorComparisonType":6,"includeRotation":true,"LimitDistance":true,"DistanceSourceX":102.0,"DistanceSourceY":98.0,"DistanceSourceZ":3.8146973E-06,"DistanceMax":1.0,"FillStep":2.0},{"Name":"前方直線_3-2","type":3,"refX":3.0,"refY":13.0,"offX":3.0,"offY":-2.0,"radius":5.0,"color":4278190080,"fillIntensity":0.5,"refActorNPCNameID":14378,"refActorRequireCast":true,"refActorCastId":[46203],"refActorUseCastTime":true,"refActorCastTimeMax":0.1,"refActorComparisonType":6,"includeRotation":true,"LimitDistance":true,"DistanceSourceX":102.0,"DistanceSourceY":113.0,"DistanceSourceZ":3.8146973E-06,"DistanceMax":1.0,"FillStep":2.0},{"Name":"前方直線_4-1","type":3,"refX":3.0,"refY":13.0,"offX":3.0,"offY":-2.0,"radius":5.0,"color":4278190080,"fillIntensity":0.5,"refActorNPCNameID":14378,"refActorRequireCast":true,"refActorCastId":[46203],"refActorUseCastTime":true,"refActorCastTimeMax":0.1,"refActorComparisonType":6,"includeRotation":true,"LimitDistance":true,"DistanceSourceX":112.0,"DistanceSourceY":98.0,"DistanceSourceZ":3.8146973E-06,"DistanceMax":1.0,"FillStep":2.0},{"Name":"前方直線_4-2","type":3,"refX":3.0,"refY":13.0,"offX":3.0,"offY":-2.0,"radius":5.0,"color":4278190080,"fillIntensity":0.5,"refActorNPCNameID":14378,"refActorRequireCast":true,"refActorCastId":[46203],"refActorUseCastTime":true,"refActorCastTimeMax":0.1,"refActorComparisonType":6,"includeRotation":true,"LimitDistance":true,"DistanceSourceX":112.0,"DistanceSourceY":113.0,"DistanceSourceZ":3.8146973E-06,"DistanceMax":1.0,"FillStep":2.0}]}
-~Lv2~{"Name":"Hvy4N_リンドブルム_スプリットスカージ","Group":"[7.4]アルカディアヘビー級4層ノーマル","ZoneLockH":[1326],"ElementsL":[{"Name":"前方直線","type":3,"refY":25.0,"offY":5.0,"radius":5.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14378,"refActorRequireCast":true,"refActorCastId":[46207],"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0}]}
+~Lv2~{"Name":"MW_トレノ・カトブレパス_悪魔の光","Group":"[7.4]ミストウェイク","ZoneLockH":[1314],"ElementsL":[{"Name":"トリガー","type":1,"refActorNPCNameID":14270,"refActorRequireCast":true,"refActorCastId":[43330],"refActorComparisonType":6,"Conditional":true,"Nodraw":true},{"Name":"岩_判定","type":1,"radius":0.0,"color":4278255103,"fillIntensity":0.3,"refActorNPCNameID":108,"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"onlyUnTargetable":true,"FaceMe":true},{"Name":"岩_中心","type":1,"radius":0.2,"color":4278190335,"fillIntensity":1.0,"refActorNPCNameID":108,"refActorComparisonType":6,"includeRotation":true,"onlyUnTargetable":true,"FaceMe":true},{"Name":"テザー_黒縁","type":1,"radius":0.0,"color":4278190080,"fillIntensity":0.5,"thicc":10.0,"refActorNPCNameID":14270,"refActorComparisonType":6,"onlyTargetable":true,"onlyVisible":true,"tether":true},{"Name":"テザー","type":1,"radius":0.0,"color":4294967295,"fillIntensity":0.5,"thicc":5.0,"refActorNPCNameID":14270,"refActorComparisonType":6,"onlyTargetable":true,"onlyVisible":true,"tether":true}]}
+~Lv2~{"Name":"MW_トレノ・カトブレパス_ペトロブレス","Group":"[7.4]ミストウェイク","ZoneLockH":[1314],"ElementsL":[{"Name":"扇","type":4,"radius":30.0,"coneAngleMin":-60,"coneAngleMax":60,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorNPCNameID":14270,"refActorRequireCast":true,"refActorCastId":[43335],"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"DistanceMax":13.2,"FillStep":4.0}]}
+~Lv2~{"Name":"MW_アムドゥシアス_サンダークラップコンチェルト","Group":"[7.4]ミストウェイク","ZoneLockH":[1314],"ElementsL":[{"Name":"正面","type":4,"radius":30.0,"coneAngleMin":30,"coneAngleMax":330,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorNPCNameID":14271,"refActorRequireCast":true,"refActorCastId":[45342],"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"DistanceMax":13.2,"FillStep":4.0},{"Name":"正面","type":4,"radius":30.0,"coneAngleMin":30,"coneAngleMax":330,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorNPCNameID":14271,"refActorRequireCast":true,"refActorCastId":[45337],"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"AdditionalRotation":3.1415927,"DistanceMax":13.2,"FillStep":4.0}]}
+~Lv2~{"Name":"MW_サンダーグリフォン_サンダリングロア","Group":"[7.4]ミストウェイク","ZoneLockH":[1314],"ElementsL":[{"Name":"前方直線","type":3,"refY":50.0,"offY":-50.0,"radius":3.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14288,"refActorRequireCast":true,"refActorCastId":[45297,45296,45298],"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0}]}
 ```
