Update [7.4]アルカディアヘビー級1層零式 .md

--- a/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級1層零式 .md
+++ b/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級1層零式 .md
@@ -3,6 +3,9 @@
 <span style="color: #FF0000;">2026/1/6/20:00<br></span>
 十字X設置あたりまで試作を公開<br>
 
+<span style="color: #FF0000;">2026/1/7/00:55<br></span>
+大部分は完成<br>
+細かい作りこみは後ほどやります<br>
 
 ## レイアウト
 ```
@@ -10,8 +13,17 @@
 ~Lv2~{"Name":"Hvy1S_ヴァンプ・ファタール_ヴァンプストンプ1","Group":"[7.4]アルカディアヘビー級1層零式","ZoneLockH":[1321],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":5.0,"Match":"(14300>45940)","MatchDelay":5.0}],"ElementsL":[{"Name":"サークル","type":1,"radius":8.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14501,"refActorComparisonType":6,"includeRotation":true,"FaceMe":true,"LimitDistance":true,"DistanceSourceX":100.0,"DistanceSourceY":100.0,"DistanceMax":7.0}]}
 ~Lv2~{"Name":"Hvy1S_ヴァンプ・ファタール_ヴァンプストンプ2","Group":"[7.4]アルカディアヘビー級1層零式","ZoneLockH":[1321],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":3.5,"Match":"(14300>45940)","MatchDelay":10.0}],"ElementsL":[{"Name":"サークル","type":1,"radius":8.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14501,"refActorComparisonType":6,"includeRotation":true,"FaceMe":true,"LimitDistance":true,"DistanceSourceX":100.0,"DistanceSourceY":100.0,"DistanceMin":7.0,"DistanceMax":17.0}]}
 ~Lv2~{"Name":"Hvy1S_ヴァンプ・ファタール_ヴァンプストンプ3","Group":"[7.4]アルカディアヘビー級1層零式","ZoneLockH":[1321],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":3.5,"Match":"(14300>45940)","MatchDelay":13.5}],"ElementsL":[{"Name":"サークル","type":1,"radius":8.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14501,"refActorComparisonType":6,"includeRotation":true,"FaceMe":true,"LimitDistance":true,"DistanceSourceX":100.0,"DistanceSourceY":100.0,"DistanceMin":17.0,"DistanceMax":27.0}]}
-~Lv2~{"Name":"Hvy1S_ヴァンプ・ファタール_ハーフムーン","Group":"[7.4]アルカディアヘビー級1層零式","ZoneLockH":[1321],"ElementsL":[{"Name":"通常_左1","type":4,"refY":46.58,"radius":60.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45943],"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":4.712389,"FillStep":2.0},{"Name":"通常_左2","type":4,"refY":46.58,"radius":60.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45944],"refActorUseCastTime":true,"refActorCastTimeMin":5.0,"refActorCastTimeMax":8.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":1.5707964,"FillStep":2.0},{"Name":"通常_右1","type":4,"refY":46.58,"radius":60.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45947],"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":1.5707964,"FillStep":2.0},{"Name":"通常_右2","type":4,"refY":46.58,"radius":60.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45948],"refActorUseCastTime":true,"refActorCastTimeMin":5.0,"refActorCastTimeMax":8.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":4.712389,"FillStep":2.0}]}
-~Lv2~{"Name":"Hvy1S_ヴァンプ・ファタール_エーテルレッティング","Group":"[7.4]アルカディアヘビー級1層零式","ZoneLockH":[1321],"ElementsL":[{"Name":"前方直線1","type":3,"refY":50.0,"offY":-50.0,"radius":5.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45971],"refActorUseCastTime":true,"refActorCastTimeMin":12.0,"refActorCastTimeMax":15.0,"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0},{"Name":"前方直線2","type":3,"refY":50.0,"offY":-50.0,"radius":5.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45971],"refActorUseCastTime":true,"refActorCastTimeMin":12.0,"refActorCastTimeMax":15.0,"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":1.5707964,"FillStep":2.0}]}
+~Lv2~{"Name":"Hvy1S_ヴァンプ・ファタール_ハーフムーン","Group":"[7.4]アルカディアヘビー級1層零式","ZoneLockH":[1321],"ElementsL":[{"Name":"通常_左1","type":4,"refY":46.58,"radius":60.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45943],"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":4.712389,"FillStep":2.0},{"Name":"通常_左2","type":4,"refY":46.58,"radius":60.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45944],"refActorUseCastTime":true,"refActorCastTimeMin":5.0,"refActorCastTimeMax":8.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":1.5707964,"FillStep":2.0},{"Name":"通常_右1","type":4,"refY":46.58,"radius":60.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45947],"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":1.5707964,"FillStep":2.0},{"Name":"通常_右2","type":4,"refY":46.58,"radius":60.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45948],"refActorUseCastTime":true,"refActorCastTimeMin":5.0,"refActorCastTimeMax":8.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":4.712389,"FillStep":2.0},{"Name":"強化_左1","type":4,"refY":46.58,"offX":4.0,"radius":60.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45945],"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":4.712389,"FillStep":2.0},{"Name":"強化_左2","type":4,"refY":46.58,"offX":-4.0,"radius":60.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45946],"refActorUseCastTime":true,"refActorCastTimeMin":5.0,"refActorCastTimeMax":8.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":1.5707964,"FillStep":2.0},{"Name":"強化_右1","type":4,"refY":46.58,"offX":-4.0,"radius":60.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45949],"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":1.5707964,"FillStep":2.0},{"Name":"強化_右2","type":4,"refY":46.58,"offX":4.0,"radius":60.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45950],"refActorUseCastTime":true,"refActorCastTimeMin":5.0,"refActorCastTimeMax":8.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":4.712389,"FillStep":2.0}]}
+~Lv2~{"Name":"Hvy1S_ヴァンプ・ファタール_エーテルレッティング","Group":"[7.4]アルカディアヘビー級1層零式","ZoneLockH":[1321],"ElementsL":[{"Name":"前方直線1-1","type":3,"refY":50.0,"offY":-50.0,"radius":5.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45971],"refActorUseCastTime":true,"refActorCastTimeMin":12.0,"refActorCastTimeMax":15.0,"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0},{"Name":"前方直線1-2","type":3,"refY":50.0,"offY":-50.0,"radius":5.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45971],"refActorUseCastTime":true,"refActorCastTimeMin":12.0,"refActorCastTimeMax":15.0,"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":1.5707964,"FillStep":2.0},{"Name":"前方直線2-1","type":3,"refY":50.0,"offY":-50.0,"radius":5.0,"color":4278255586,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45971],"refActorUseCastTime":true,"refActorCastTimeMin":10.0,"refActorCastTimeMax":12.0,"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0},{"Name":"前方直線2-2","type":3,"refY":50.0,"offY":-50.0,"radius":5.0,"color":4278255586,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45971],"refActorUseCastTime":true,"refActorCastTimeMin":10.0,"refActorCastTimeMax":12.0,"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":1.5707964,"FillStep":2.0}]}
+~Lv2~{"Name":"Hvy1S_ヴァンプ・ファタール_サディスティック・スクリーチ","Group":"[7.4]アルカディアヘビー級1層零式","ZoneLockH":[1321],"ElementsL":[{"Name":"チャクラム・ファタール_矢印1","type":3,"refY":2.0,"offY":-2.0,"radius":0.0,"color":3372154890,"fillIntensity":0.345,"thicc":5.0,"refActorNPCNameID":14500,"refActorComparisonType":6,"includeRotation":true,"onlyVisible":true},{"Name":"チャクラム・ファタール_矢印2","type":3,"refY":2.0,"offX":-2.0,"radius":0.0,"color":3372154890,"fillIntensity":0.345,"thicc":5.0,"refActorNPCNameID":14500,"refActorComparisonType":6,"includeRotation":true,"onlyVisible":true},{"Name":"チャクラム・ファタール_矢印3","type":3,"refY":2.0,"offX":2.0,"radius":0.0,"color":3372154890,"fillIntensity":0.345,"thicc":5.0,"refActorNPCNameID":14500,"refActorComparisonType":6,"includeRotation":true,"onlyVisible":true},{"Name":"チャクラム・ファタール_サークル","type":1,"radius":0.0,"color":3372154890,"fillIntensity":0.345,"thicc":5.0,"refActorNPCNameID":14500,"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"onlyVisible":true},{"Name":"チャクラム・ファタール_前方直線","type":3,"refY":10.0,"radius":0.0,"color":4278236159,"fillIntensity":0.3,"thicc":0.0,"refActorNPCNameID":14500,"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"onlyVisible":true,"FillStep":2.0},{"Name":"トーチャー・ファタール_前方直線","type":3,"refY":10.0,"radius":1.0,"color":4278236159,"fillIntensity":0.3,"thicc":0.0,"refActorNPCNameID":14499,"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"onlyVisible":true,"FillStep":2.0}]}
+~Lv2~{"Name":"Hvy1S_ヴァンプ・ファタール_スプレッドソニック","Group":"[7.4]アルカディアヘビー級1層零式","ZoneLockH":[1321],"ElementsL":[{"Name":"テキスト","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":3.0,"overlayFScale":3.0,"thicc":0.0,"overlayText":"ロール散会","refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45980],"refActorComparisonType":6}]}
+~Lv2~{"Name":"Hvy1S_ヴァンプ・ファタール_アグリゲートソニック","Group":"[7.4]アルカディアヘビー級1層零式","ZoneLockH":[1321],"ElementsL":[{"Name":"テキスト","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":3.0,"overlayFScale":3.0,"thicc":0.0,"overlayText":"頭割り","refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45981],"refActorComparisonType":6}]}
+~Lv2~{"Name":"Hvy1S_ヴァンプ・ファタール_サングインスクラッチ1","Group":"[7.4]アルカディアヘビー級1層零式","ZoneLockH":[1321],"ElementsL":[{"Name":"扇","type":4,"radius":25.0,"coneAngleMin":-15,"coneAngleMax":15,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45989],"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"DistanceMax":13.2,"FillStep":4.0}]}
+~Lv2~{"Name":"Hvy1S_ヴァンプ・ファタール_サングインスクラッチ2","Group":"[7.4]アルカディアヘビー級1層零式","ZoneLockH":[1321],"Freezing":true,"FreezeFor":5.7,"IntervalBetweenFreezes":2.0,"FreezeDisplayDelay":3.0,"ElementsL":[{"Name":"扇","type":4,"radius":25.0,"coneAngleMin":-15,"coneAngleMax":15,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45989],"refActorUseCastTime":true,"refActorCastTimeMin":0.1,"refActorCastTimeMax":1.0,"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"AdditionalRotation":0.3926991,"DistanceMax":13.2,"FillStep":4.0}]}
+~Lv2~{"Name":"Hvy1S_ヴァンプ・ファタール_サングインスクラッチ3","Group":"[7.4]アルカディアヘビー級1層零式","ZoneLockH":[1321],"Freezing":true,"FreezeFor":8.4,"IntervalBetweenFreezes":2.0,"FreezeDisplayDelay":5.7,"ElementsL":[{"Name":"扇","type":4,"radius":25.0,"coneAngleMin":-15,"coneAngleMax":15,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45989],"refActorUseCastTime":true,"refActorCastTimeMin":0.1,"refActorCastTimeMax":1.0,"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"DistanceMax":13.2,"FillStep":4.0}]}
+~Lv2~{"Name":"Hvy1S_ヴァンプ・ファタール_サングインスクラッチ4","Group":"[7.4]アルカディアヘビー級1層零式","ZoneLockH":[1321],"Freezing":true,"FreezeFor":11.1,"IntervalBetweenFreezes":2.0,"FreezeDisplayDelay":8.4,"ElementsL":[{"Name":"扇","type":4,"radius":25.0,"coneAngleMin":-15,"coneAngleMax":15,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45989],"refActorUseCastTime":true,"refActorCastTimeMin":0.1,"refActorCastTimeMax":1.0,"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"AdditionalRotation":0.3926991,"DistanceMax":13.2,"FillStep":4.0}]}
+~Lv2~{"Name":"Hvy1S_ヴァンプ・ファタール_サングインスクラッチ5","Group":"[7.4]アルカディアヘビー級1層零式","ZoneLockH":[1321],"Freezing":true,"FreezeFor":13.8,"IntervalBetweenFreezes":2.0,"FreezeDisplayDelay":11.1,"ElementsL":[{"Name":"扇","type":4,"radius":25.0,"coneAngleMin":-15,"coneAngleMax":15,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45989],"refActorUseCastTime":true,"refActorCastTimeMin":0.1,"refActorCastTimeMax":1.0,"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"DistanceMax":13.2,"FillStep":4.0}]}
+~Lv2~{"Name":"Hvy1S_ファタールバット_AOE","Group":"[7.4]アルカディアヘビー級1層零式","ZoneLockH":[1321],"ElementsL":[{"Name":"サークル_予兆","type":1,"radius":7.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14501,"refActorRequireBuff":true,"refActorBuffId":[2056],"refActorUseBuffParam":true,"refActorBuffParam":1062,"refActorComparisonType":6,"includeRotation":true,"FaceMe":true},{"Name":"サークル_キャスト","type":1,"radius":7.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14501,"refActorRequireCast":true,"refActorCastId":[45994],"refActorComparisonType":6,"includeRotation":true,"FaceMe":true},{"Name":"ドーナツ_予兆","type":1,"radius":4.0,"Donut":11.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14501,"refActorRequireBuff":true,"refActorBuffId":[2056],"refActorUseBuffParam":true,"refActorBuffParam":1063,"refActorComparisonType":6,"includeRotation":true,"FaceMe":true},{"Name":"ドーナツ_キャスト","type":1,"radius":4.0,"Donut":11.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14501,"refActorRequireCast":true,"refActorCastId":[45995],"refActorComparisonType":6,"includeRotation":true,"FaceMe":true}]}
 ~Lv2~{"Name":"Hvy1S_トーチャー・ファタール_突き出る","Group":"[7.4]アルカディアヘビー級1層零式","ZoneLockH":[1321],"ElementsL":[{"Name":"前方直線1","type":3,"refY":50.0,"radius":2.51,"color":4278190335,"fillIntensity":0.5,"refActorNPCNameID":14301,"refActorRequireCast":true,"refActorCastId":[45928,45929,45930],"refActorUseCastTime":true,"refActorCastTimeMin":2.0,"refActorCastTimeMax":5.0,"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0,"Conditional":true,"ConditionalInvert":true},{"Name":"前方直線2","type":3,"refY":50.0,"radius":2.51,"color":4278190335,"fillIntensity":0.5,"refActorNPCNameID":14301,"refActorRequireCast":true,"refActorCastId":[45928,45929,45930],"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0}]}
 ```
 
