--- a/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級2層零式.md
+++ b/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級2層零式.md
@@ -2,12 +2,16 @@
 
 <span style="color: #FF0000;">2026/1/7/22:00<br></span>
 splatoonのgithubの翻訳＋α<br>
-中途半端な状態ですが、時間がかかるのでいったんの区切りとして公開
+中途半端な状態ですが、時間がかかるのでいったんの区切りとして公開<br>
 
+<span style="color: #FF0000;">2026/1/8/20:40<br></span>
+・Hvy2S_ディープブルー_シック・テイクオフ_頭割<br>
+追加
 
 ## レイアウト
 ```
 ~Lv2~{"Name":"Hvy2S_ディープブルー_シック・テイクオフ_散開","InternationalName":{"En":"M10S Sickest Take Off - Spread (Phase 1)","Jp":"Hvy2S_ディープブルー_シック・テイクオフ_散開","De":"M10S Sickest Take Off - Spread (Phase 1)","Fr":"M10S Sickest Take Off - Spread (Phase 1)"},"Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"DCond":5,"UseTriggers":true,"MinDistance":0.1,"MaxDistance":30.0,"UseDistanceLimit":true,"DistanceLimitType":1,"Triggers":[{"Type":2,"Duration":16.0,"Match":"vfx/common/eff/m0982stlp2c0c.avfx","FireOnce":true}],"ElementsL":[{"Name":"サークル","type":1,"radius":5.0,"color":4278190335,"fillIntensity":0.3,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":3.0,"refActorComparisonType":1}]}
+~Lv2~{"Name":"Hvy2S_ディープブルー_シック・テイクオフ_頭割","InternationalName":{"En":"M10S Sickest Take Off - Stack (Phase 1)","Jp":"Hvy2S_ディープブルー_シック・テイクオフ_頭割","De":"M10S Sickest Take Off - Stack (Phase 1)","Fr":"M10S Sickest Take Off - Stack (Phase 1)"},"Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":16.0,"Match":"vfx/common/eff/m0982stlp1c0c.avfx","FireOnce":true}],"ElementsL":[{"Name":"サークル","type":1,"radius":5.0,"Filled":false,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":5.0,"overlayTextIntl":{"En":"Stack","Jp":"頭割"},"refActorPlaceholder":["<h1>","<h2>"],"refActorComparisonType":5}]}
 ~Lv2~{"Name":"Hvy2S_ディープブルー_ダブルアリウープ1","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"ConditionalAnd":true,"ElementsL":[{"Name":"cond - no red hot","type":1,"refActorNPCNameID":14370,"refActorComparisonType":6,"onlyTargetable":true,"Conditional":true,"ConditionalInvert":true,"Nodraw":true},{"Name":"Cond - no status","type":1,"refActorRequireBuff":true,"refActorBuffId":[4974,4975],"refActorType":1,"Conditional":true,"ConditionalInvert":true,"Nodraw":true},{"Name":"pc","type":1,"refActorName":"*","ObjectKinds":[1],"IsCapturing":true,"Nodraw":true},{"Name":"Reverse","type":4,"radius":40.0,"coneAngleMin":-15,"coneAngleMax":15,"color":3355489279,"fillIntensity":0.237,"refActorNPCNameID":14369,"refActorRequireCast":true,"refActorCastId":[46560],"refActorCastTimeMax":10.0,"refActorComparisonType":6,"includeRotation":true,"FaceMe":true,"faceplayer":"<element:pc>"},{"Name":"Double","type":4,"radius":40.0,"coneAngleMin":-15,"coneAngleMax":15,"color":3355489279,"fillIntensity":0.237,"refActorNPCNameID":14369,"refActorRequireCast":true,"refActorCastId":[46557],"refActorCastTimeMax":10.0,"refActorComparisonType":6,"includeRotation":true,"FaceMe":true,"faceplayer":"<element:pc>"}]}
 ~Lv2~{"Name":"Hvy2S_ディープブルー_ダブルアリウープ2","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"ConditionalAnd":true,"Freezing":true,"FreezeFor":4.0,"ElementsL":[{"Name":"cond - no red hot","type":1,"refActorNPCNameID":14370,"refActorComparisonType":6,"onlyTargetable":true,"Conditional":true,"ConditionalInvert":true,"Nodraw":true},{"Name":"Cond - no status","type":1,"refActorRequireBuff":true,"refActorBuffId":[4974,4975],"refActorType":1,"Conditional":true,"ConditionalInvert":true,"Nodraw":true},{"Name":"pc","type":1,"refActorName":"*","ObjectKinds":[1],"IsCapturing":true,"Nodraw":true},{"Name":"Double","type":4,"radius":40.0,"coneAngleMin":-15,"coneAngleMax":15,"fillIntensity":0.488,"refActorNPCNameID":14369,"refActorRequireCast":true,"refActorCastId":[46557],"refActorUseCastTime":true,"refActorCastTimeMin":4.7,"refActorCastTimeMax":8.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"FaceMe":true,"faceplayer":"<element:pc>"}]}
 ~Lv2~{"Name":"Hvy2S_ディープブルー_ハイドロバリエル","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"ElementsL":[{"Name":"扇","type":4,"radius":50.0,"coneAngleMin":-60,"coneAngleMax":60,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorNPCNameID":14369,"refActorRequireCast":true,"refActorCastId":[46547],"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"DistanceMax":13.2,"FillStep":4.0}]}
@@ -19,3 +23,9 @@ splatoonのgithubの翻訳＋α<br>
 ~Lv2~{"Name":"Hvy2S_エクストリームズ・エーテル_ミックスバースト","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"ElementsL":[{"Name":"サークル","type":1,"radius":9.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14371,"refActorRequireCast":true,"refActorCastId":[46587],"refActorComparisonType":6,"includeRotation":true,"FaceMe":true}]}
 ```
 
+## スクリプト
+###インセインエアーAOE<br>
+設定不要
+```
+https://github.com/PunishXIV/Splatoon/raw/refs/heads/main/SplatoonScripts/Duties/Dawntrail/M10S%20Insane%20Air.cs
+```
