--- a/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級2層零式.md
+++ b/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級2層零式.md
@@ -7,6 +7,7 @@ splatoonのgithubの翻訳＋α<br>
 <span style="color: #FF0000;">2026/1/8/20:40<br></span>
 ・Hvy2S_ディープブルー_シック・テイクオフ_頭割<br>
 追加
+・公式githubのインセインエアーのスクリプトを記載
 
 ## レイアウト
 ```
@@ -24,7 +25,7 @@ splatoonのgithubの翻訳＋α<br>
 ```
 
 ## スクリプト
-### インセインエアーAOE<br>
+### インセインエアー<br>
 設定不要
 ```
 https://github.com/PunishXIV/Splatoon/raw/refs/heads/main/SplatoonScripts/Duties/Dawntrail/M10S%20Insane%20Air.cs
