--- a/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級2層零式.md
+++ b/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級2層零式.md
@@ -6,8 +6,9 @@ splatoonのgithubの翻訳＋α<br>
 
 <span style="color: #FF0000;">2026/1/8/20:40<br></span>
 ・Hvy2S_ディープブルー_シック・テイクオフ_頭割<br>
-追加
-・公式githubのインセインエアーのスクリプトを記載
+追加<br><br>
+
+・公式githubのインセインエアーのスクリプトを記載<br>
 
 ## レイアウト
 ```
