--- a/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級2層零式.md
+++ b/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級2層零式.md
@@ -10,14 +10,21 @@ splatoonのgithubの翻訳＋α<br>
 
 ・公式githubのインセインエアーのスクリプトを記載<br>
 
+<span style="color: #FF0000;">2026/1/8/21:40<br></span>
+・Hvy2S_ディープブルー_ハイドロバリエル_AOE<br>
+・Hvy2S_ディープブルー_ハイドロバリエル_頭割<br>
+・Hvy2S_ディープブルー_ハイドロバリエル_散開<br>
+追加<br>
+
 ## レイアウト
 ```
 ~Lv2~{"Name":"Hvy2S_ディープブルー_シック・テイクオフ_散開","InternationalName":{"En":"M10S Sickest Take Off - Spread (Phase 1)","Jp":"Hvy2S_ディープブルー_シック・テイクオフ_散開","De":"M10S Sickest Take Off - Spread (Phase 1)","Fr":"M10S Sickest Take Off - Spread (Phase 1)"},"Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"DCond":5,"UseTriggers":true,"MinDistance":0.1,"MaxDistance":30.0,"UseDistanceLimit":true,"DistanceLimitType":1,"Triggers":[{"Type":2,"Duration":16.0,"Match":"vfx/common/eff/m0982stlp2c0c.avfx","FireOnce":true}],"ElementsL":[{"Name":"サークル","type":1,"radius":5.0,"color":4278190335,"fillIntensity":0.3,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":3.0,"refActorComparisonType":1}]}
 ~Lv2~{"Name":"Hvy2S_ディープブルー_シック・テイクオフ_頭割","InternationalName":{"En":"M10S Sickest Take Off - Stack (Phase 1)","Jp":"Hvy2S_ディープブルー_シック・テイクオフ_頭割","De":"M10S Sickest Take Off - Stack (Phase 1)","Fr":"M10S Sickest Take Off - Stack (Phase 1)"},"Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":16.0,"Match":"vfx/common/eff/m0982stlp1c0c.avfx","FireOnce":true}],"ElementsL":[{"Name":"サークル","type":1,"radius":5.0,"Filled":false,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":5.0,"overlayTextIntl":{"En":"Stack","Jp":"頭割"},"refActorPlaceholder":["<h1>","<h2>"],"refActorComparisonType":5}]}
 ~Lv2~{"Name":"Hvy2S_ディープブルー_ダブルアリウープ1","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"ConditionalAnd":true,"ElementsL":[{"Name":"cond - no red hot","type":1,"refActorNPCNameID":14370,"refActorComparisonType":6,"onlyTargetable":true,"Conditional":true,"ConditionalInvert":true,"Nodraw":true},{"Name":"Cond - no status","type":1,"refActorRequireBuff":true,"refActorBuffId":[4974,4975],"refActorType":1,"Conditional":true,"ConditionalInvert":true,"Nodraw":true},{"Name":"pc","type":1,"refActorName":"*","ObjectKinds":[1],"IsCapturing":true,"Nodraw":true},{"Name":"Reverse","type":4,"radius":40.0,"coneAngleMin":-15,"coneAngleMax":15,"color":3355489279,"fillIntensity":0.237,"refActorNPCNameID":14369,"refActorRequireCast":true,"refActorCastId":[46560],"refActorCastTimeMax":10.0,"refActorComparisonType":6,"includeRotation":true,"FaceMe":true,"faceplayer":"<element:pc>"},{"Name":"Double","type":4,"radius":40.0,"coneAngleMin":-15,"coneAngleMax":15,"color":3355489279,"fillIntensity":0.237,"refActorNPCNameID":14369,"refActorRequireCast":true,"refActorCastId":[46557],"refActorCastTimeMax":10.0,"refActorComparisonType":6,"includeRotation":true,"FaceMe":true,"faceplayer":"<element:pc>"}]}
 ~Lv2~{"Name":"Hvy2S_ディープブルー_ダブルアリウープ2","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"ConditionalAnd":true,"Freezing":true,"FreezeFor":4.0,"ElementsL":[{"Name":"cond - no red hot","type":1,"refActorNPCNameID":14370,"refActorComparisonType":6,"onlyTargetable":true,"Conditional":true,"ConditionalInvert":true,"Nodraw":true},{"Name":"Cond - no status","type":1,"refActorRequireBuff":true,"refActorBuffId":[4974,4975],"refActorType":1,"Conditional":true,"ConditionalInvert":true,"Nodraw":true},{"Name":"pc","type":1,"refActorName":"*","ObjectKinds":[1],"IsCapturing":true,"Nodraw":true},{"Name":"Double","type":4,"radius":40.0,"coneAngleMin":-15,"coneAngleMax":15,"fillIntensity":0.488,"refActorNPCNameID":14369,"refActorRequireCast":true,"refActorCastId":[46557],"refActorUseCastTime":true,"refActorCastTimeMin":4.7,"refActorCastTimeMax":8.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"FaceMe":true,"faceplayer":"<element:pc>"}]}
-~Lv2~{"Name":"Hvy2S_ディープブルー_ハイドロバリエル","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"ElementsL":[{"Name":"扇","type":4,"radius":50.0,"coneAngleMin":-60,"coneAngleMax":60,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorNPCNameID":14369,"refActorRequireCast":true,"refActorCastId":[46547],"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"DistanceMax":13.2,"FillStep":4.0}]}
-~Lv2~{"Name":"Hvy2S_ディープブルー_リバースアリウープ","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"ElementsL":[]}
+~Lv2~{"Name":"Hvy2S_ディープブルー_ハイドロバリエル_AOE","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"ElementsL":[{"Name":"扇","type":4,"radius":50.0,"coneAngleMin":-60,"coneAngleMax":60,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorNPCNameID":14369,"refActorRequireCast":true,"refActorCastId":[46547],"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"DistanceMax":13.2,"FillStep":4.0}]}
+~Lv2~{"Name":"Hvy2S_ディープブルー_ハイドロバリエル_頭割","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":5.0,"Match":"MapEffect: 2, 64, 128","MatchDelay":5.0},{"Type":2,"Duration":5.0,"Match":"MapEffect: 4, 64, 128","MatchDelay":5.0}],"ElementsL":[{"Name":"サークル","type":1,"radius":5.0,"color":4278190335,"Filled":false,"fillIntensity":0.3,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":5.0,"overlayTextIntl":{"Jp":"頭割り"},"refActorPlaceholder":["<h1>","<h2>"],"refActorRequireBuff":true,"refActorBuffId":[4975],"refActorComparisonType":5,"includeRotation":true,"FaceMe":true}]}
+~Lv2~{"Name":"Hvy2S_ディープブルー_ハイドロバリエル_散開","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"DCond":5,"UseTriggers":true,"MinDistance":0.1,"MaxDistance":50.0,"UseDistanceLimit":true,"DistanceLimitType":1,"Triggers":[{"Type":2,"Duration":5.0,"Match":"MapEffect: 2, 1024, 2048","MatchDelay":5.0},{"Type":2,"Duration":5.0,"Match":"MapEffect: 4, 1024, 2048","MatchDelay":5.0}],"ElementsL":[{"Name":"サークル","type":1,"radius":5.0,"color":4278190335,"fillIntensity":0.3,"refActorRequireBuff":true,"refActorBuffId":[4975],"refActorComparisonType":1,"includeRotation":true,"FaceMe":true}]}
 ~Lv2~{"Name":"Hvy2S_エクストリームウェーブ_AOE","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"ElementsL":[{"Name":"Orb","type":1,"radius":0.0,"color":3355639552,"fillIntensity":0.5,"refActorNPCNameID":14373,"refActorComparisonType":6,"includeHitbox":true,"onlyTargetable":true,"Conditional":true},{"Name":"Water tether","type":3,"refY":40.0,"radius":5.0,"color":3372218624,"fillIntensity":0.248,"refActorComparisonType":7,"includeRotation":true,"FaceMe":true,"refActorVFXPath":"vfx/lockon/eff/m0982trg_c0c.avfx","refActorVFXMax":15000,"refActorTether":true,"refActorTetherParam2":57,"refActorIsTetherSource":false,"refActorIsTetherLive":true,"refActorTetherConnectedWithPlayer":[],"faceplayer":"<tethered>","FaceInvert":true},{"Name":"Fire tether","type":3,"refY":40.0,"radius":5.0,"fillIntensity":0.248,"refActorComparisonType":7,"includeRotation":true,"FaceMe":true,"refActorVFXPath":"vfx/lockon/eff/m0982trg_c1c.avfx","refActorVFXMax":15000,"refActorTether":true,"refActorTetherParam2":57,"refActorIsTetherSource":false,"refActorIsTetherLive":true,"refActorTetherConnectedWithPlayer":[],"faceplayer":"<tethered>","FaceInvert":true},{"Name":"Water tether","type":3,"refY":40.0,"radius":5.0,"color":3372218624,"fillIntensity":0.248,"refActorComparisonType":7,"includeRotation":true,"FaceMe":true,"refActorVFXPath":"vfx/lockon/eff/m0982trg_c0c.avfx","refActorVFXMax":15000,"refActorTether":true,"refActorTetherParam2":17,"refActorIsTetherSource":false,"refActorIsTetherLive":true,"refActorTetherConnectedWithPlayer":[],"faceplayer":"<tethered>","FaceInvert":true},{"Name":"Fire tether","type":3,"refY":40.0,"radius":5.0,"fillIntensity":0.248,"refActorComparisonType":7,"includeRotation":true,"FaceMe":true,"refActorVFXPath":"vfx/lockon/eff/m0982trg_c1c.avfx","refActorVFXMax":15000,"refActorTether":true,"refActorTetherParam2":17,"refActorIsTetherSource":false,"refActorIsTetherLive":true,"refActorTetherConnectedWithPlayer":[],"faceplayer":"<tethered>","FaceInvert":true}]}
 ~Lv2~{"Name":"Hvy2S_レッドホッド_エクストリームウェーブ","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":6.0,"Match":"vfx/lockon/eff/m0982trg_c1c.avfx spawned on me"}],"ElementsL":[{"Name":"Orb","type":1,"radius":0.0,"color":3355639552,"fillIntensity":0.5,"refActorNPCNameID":14373,"refActorComparisonType":6,"includeHitbox":true,"onlyTargetable":true,"Conditional":true},{"Name":"黒線","type":1,"radius":30.0,"color":4278190080,"Filled":false,"fillIntensity":0.3,"thicc":10.0,"refActorNPCNameID":14370,"refActorComparisonType":6,"includeRotation":true,"onlyVisible":true,"FaceMe":true},{"Name":"白線","type":1,"radius":30.0,"color":4294967295,"Filled":false,"fillIntensity":0.3,"thicc":5.0,"refActorNPCNameID":14370,"refActorComparisonType":6,"includeRotation":true,"onlyVisible":true,"FaceMe":true}]}
 ~Lv2~{"Name":"Hvy2S_ディープブルー_エクストリームウェーブ","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":6.0,"Match":"vfx/lockon/eff/m0982trg_c0c.avfx spawned on me"}],"ElementsL":[{"Name":"Orb","type":1,"radius":0.0,"color":3355639552,"fillIntensity":0.5,"refActorNPCNameID":14373,"refActorComparisonType":6,"includeHitbox":true,"onlyTargetable":true,"Conditional":true},{"Name":"黒線","type":1,"radius":30.0,"color":4278190080,"Filled":false,"fillIntensity":0.3,"thicc":10.0,"refActorNPCNameID":14369,"refActorComparisonType":6,"includeRotation":true,"onlyVisible":true,"FaceMe":true},{"Name":"白線","type":1,"radius":30.0,"color":4294967295,"Filled":false,"fillIntensity":0.3,"thicc":5.0,"refActorNPCNameID":14369,"refActorComparisonType":6,"includeRotation":true,"onlyVisible":true,"FaceMe":true}]}
